add language changing without ressource files